# Aqua

./: .gitignore  README.md  create_docs.sh  glslfilter.py  install_dependencies.sh  open.bat  win_sync.sh
.github/workflows/: cmake-single-platform.yml
Aqua/: CMakeLists.txt  Doxyfile
Aqua/inc/: breeder.hpp  color.hpp  engine.hpp  fish.hpp  force.hpp  forces.hpp  island.hpp  net.hpp  vec.hpp
Aqua/src/: breeder.cpp  color.cpp  engine.cpp  event_handler.cpp  fish.cpp  force.cpp  island.cpp  iter.cpp  main.cpp  net.cpp  perlin.frag
Aqua/test/: fish.cpp  fishT.cpp  force_test.cpp  forces.cpp  forcesT.cpp
Docs/: Quck Start Guide.docx  Specifikáció.docx  Terv.docx
